--- a/cv_02/dvora135_EMB-cv_02.tex
+++ b/cv_02/dvora135_EMB-cv_02.tex
@@ -162,7 +162,7 @@ První měření proběhlo s počátečním $U_{RMS} = 1~\textrm{V}$. Pro druhé
 
 
 \section{Zpracování naměřených hodnot}
-Naměřená data jsou zobrazena níže v tabulkách \ref{tab:data1} a~\ref{tab:data2} a~jím odpovídajícím grafům.
+Naměřená data jsou zobrazena níže v~tabulkách \ref{tab:data1} a~\ref{tab:data2} a~jím odpovídajícím grafům.
 
 \begin{table}[h!]
     \centering
