--- a/cv_03/dvora135_EMB-cv_03.tex
+++ b/cv_03/dvora135_EMB-cv_03.tex
@@ -291,7 +291,7 @@ Pro zjištění střední aritmetické hodnoty využijeme tabulku maximálních 
 \section{Závěrečné vyhodnocení}
 Ověřili jsme, že úhel sepnutí sinusového průběhu má vliv na efektivní hodnotu napětí. Tohoto je využito například ve stmívačích světel, díky čemuž jde regulovat výkon, který jde od žárovky. Jelikož spínací triak pouze vede/nevede, netvoří se na něm takové výkonové ztráty, jako například na tranzistoru, který by reguloval stejnosměrný proud.
 
-Multimetry, které jsem využili, neměřily ani v jednom případě správnou efektivní hodnotu a jejich relativní chyba měření se pohybovala od 0,098 do 0,179, což je velice špatný výsledek. A to i u multimetru HP, který by podle \textit{datasheetu} měl mít funkci \textit{True RMS} \cite{datasheet_multimetry}.
+Multimetry, které jsem využili, neměřily ani v jednom případě správnou efektivní hodnotu a~jejich relativní chyba měření se pohybovala od 0,098 do 0,179, což je velice špatný výsledek. A to i u multimetru HP, který by podle \textit{datasheetu} měl mít funkci \textit{True RMS} \cite{datasheet_multimetry}.
 
 
 %--- LITERATURA a~ZDROJE (povinne) ---
