--- a/cv_04/dvora135_EMB-cv_04.tex
+++ b/cv_04/dvora135_EMB-cv_04.tex
@@ -321,7 +321,7 @@ Rozšířená nejistota typu B, $k_r$\,=\,2:
 
 
 \section{Závěrečné vyhodnocení}
-Měřením bylo potvrzeno, že některé voltmetry nelze považovat za ideální. Jejich přítomnost v obvodu může způsobit chybu měření napětí a v případě dalších měřidel chybu měření dalších veličin. Hodnoty měřené číslicovým voltmetrem byly velice blízké skutečné hodnotě naprázdno a proto jsme mohli vnitřní odpor voltmetru považovat za nekonečný a odporový dělič za nezatížený.
+Měřením bylo potvrzeno, že některé voltmetry nelze považovat za ideální. Jejich přítomnost v obvodu může způsobit chybu měření napětí a v případě dalších měřidel chybu měření dalších veličin. Hodnoty měřené číslicovým voltmetrem byly velice blízké skutečné hodnotě naprázdno a~proto jsme mohli vnitřní odpor voltmetru považovat za nekonečný a odporový dělič za nezatížený.
 
 Výstupní odpor napěťového děliče nám vyšel \rd \,=\,37\,929,8\,$\pm$\,2249\,$\Omega$.
 
