--- a/cv_06/dvora135_EMB-cv_06.tex
+++ b/cv_06/dvora135_EMB-cv_06.tex
@@ -275,7 +275,7 @@ Nejistotu pro ručičkový ampérmetr spočítáme pomocí vzorce
     u(I_{rv}) = \frac{TP\cdot rozsah}{100\cdot\sqrt{3}} = \frac{0,5\cdot 150\cdot 10^{-6}}{100\cdot\sqrt{3}} = 0,433 \mu ~\textrm{A.}
 \end{equation}
 
-Nejistotu pro číslicový ampérmetr s rozsahem 200\,μA spočítáme následovně:
+Nejistotu pro číslicový ampérmetr s~rozsahem 200\,μA spočítáme následovně:
 \begin{equation}
     i(I_{čv}) = \frac{\delta_1 X + \delta_2 M}{100\sqrt{3}} = \frac{0,3\%\cdot I+2\cdot\frac{200}{20000}}{100\sqrt{3}}\,\mu \textrm{A}
 \end{equation}
