--- a/cv_07/dvora135_EMB-cv_07.tex
+++ b/cv_07/dvora135_EMB-cv_07.tex
@@ -286,7 +286,7 @@ Naměřené hodnoty jsou v~tabulkách níže. Výstupní proud byl počítán ja
 \end{graf}
 
 \section{Závěrečné vyhodnocení}
-Zjistili jsme, že diody se nechovají lineárně, pokud jde o malá napětí. To je způsobeno dopředným napětím, při kterém ze diody začínají výrazněji otevírat (dopředné napětí je dáno typem diody). Z grafů je vidět, že dopředné napětí pro naše diody se pohybuje kolem 0,7~V, což je typická hodnota. Také jsme ověřili, že při použití zpětné vazby pomocí operačního zesilovače můžeme dosáhnout velice lineární VA charakteristiky.
+Zjistili jsme, že diody se nechovají lineárně, pokud jde o~malá napětí. To je způsobeno dopředným napětím, při kterém ze diody začínají výrazněji otevírat (dopředné napětí je dáno typem diody). Z grafů je vidět, že dopředné napětí pro naše diody se pohybuje kolem 0,7~V, což je typická hodnota. Také jsme ověřili, že při použití zpětné vazby pomocí operačního zesilovače můžeme dosáhnout velice lineární VA charakteristiky.
 
 
 %--- LITERATURA a~ZDROJE (povinne) ---
