--- a/cv_09/dvora135_EMB-cv_09.tex
+++ b/cv_09/dvora135_EMB-cv_09.tex
@@ -165,12 +165,12 @@
         \item čítačem v režimu \textbf{měření frekvence při různých dobách měření},
         \item čítačem v režimu \textbf{měření doby periody} jednak \textbf{přímo}, jednak \textbf{s využitím průměrování}.
 
-        Měřte při kmitočtech 60~Hz, 500~Hz, 5~kHz, 10~kHz, 20~kHz, 50~kHz, 100~kHz. U všech měření určete nejistotu měření způsobenou rozlišením.
+        Měřte při kmitočtech 60~Hz, 500~Hz, 5~kHz, 10~kHz, 20~kHz, 50~kHz, 100~kHz. U všech měření určete \textbf{nejistotu} měření \textbf{způsobenou rozlišením}.
     \end{enumerate}
     \item Ověřte přesnost krystalem řízených hodin:
     \begin{enumerate}[label=\alph*)]
         \item měřením doby periody pulsů pro krokový motor (správná hodnota je 2~s),
-        \item přímým měřením frekvence oscilátoru (správná hodnota je 2\texp{15}, tj. 32\,768~Hz, resp. 2 tj.~4\,194\,304~Hz).
+        \item přímým měřením frekvence oscilátoru (správná hodnota je 2\texp{15}, tj. 32\,768~Hz, resp. 2^{22} tj.~4\,194\,304~Hz).
     \end{enumerate}
 \end{enumerate}
 V obou případech určete nepřesnost hodin v sekundách za den.
