--- a/cv_09/dvora135_EMB-cv_09.tex
+++ b/cv_09/dvora135_EMB-cv_09.tex
@@ -185,7 +185,7 @@ V obou případech určete nepřesnost hodin v sekundách za den.
 \section{Seznam použitých přístrojů}
 
 \section{Teoretický úvod}
-
+sdfa
 
 
 \section{Naměřené hodnoty}
