--- a/cv_09/dvora135_EMB-cv_09.tex
+++ b/cv_09/dvora135_EMB-cv_09.tex
@@ -299,12 +299,12 @@ Jelikož neznáme efektivní hodnotu šumu vstupního zesilovače, nemůžeme ur
 Pro zjištění přesnosti hodin použijeme rovnice \ref{eq:presnost_T} a \ref{eq:presnost_f}. Budeme vycházet z toho, že den má $24\cdot 60\cdot 60 = 86\,400~s$. 
 
 \begin{equation}
-  \left(\frac{T_m}{T}-1\right)\cdot 86\,400~s = \frac{2,0000389}{2}-1~s = 1,68~\textrm{s/den}
+  \left(\frac{T_m}{T}-1\right)\cdot 86\,400~s = \left(\frac{2,0000389}{2}-1\right)\cdot 86\,400~s = 1,68~\textrm{s/den}
   \label{eq:presnost_T}
 \end{equation}
 
 \begin{equation}
-  \left(\frac{f_m}{f}-1\right)\cdot 86\,400~s = \frac{2,0000389}{2}-1~s = 1,68~\textrm{s/den}
+  \left(\frac{f_m}{f}-1\right)\cdot 86\,400~s = \left(\frac{32\,767,7}{32\,768}-1\right)\cdot 86\,400~s = -0,79~\textrm{s/den}
   \label{eq:presnost_T}
 \end{equation}
 
