--- a/cv_09/dvora135_EMB-cv_09.tex
+++ b/cv_09/dvora135_EMB-cv_09.tex
@@ -312,16 +312,17 @@ Relativní chyba stupnice vůči měřené hodnotě je zobrazena v tabulce \ref{
 \begin{table}[h!]
   \centering
   \begin{tabular}{|c|c|c|c|}
-    ;60 Hz [Hz];10 kHz [Hz];100 kHz [Hz]\\\hline\hline
-    Naměřeno;67,9;10623,1;110837,3\\\hline
-    Relativní chyba;0,11634757;0,058655195;0,097776651\\\hline
+    60 Hz [Hz]&10 kHz [Hz]&100 kHz [Hz]\\\hline\hline
+    Naměřeno&67,9&10623,1&110837,3\\\hline
+    Absolutní chyba&7,9&623,1&10837,3\\\hline
+    Relativní chyba&0,11634757&0,058655195&0,097776651\\\hline
   \end{tabular}
   \label{tab:chyba}
   \caption{Relativní chyba stupnice na generátoru funkcí}
 \end{table}
 
 \section{Závěrečné vyhodnocení}
-Zjistili jsme nepřesnost hodin a jaký rozchod můžeme čekat za den
+Zjistili jsme nepřesnost hodin a jaký rozchod můžeme čekat za den. Také jsme ověřili, jak se při průměrování a při používání delšího časového okna pro počítání tiků může zvýšit přesnost resp. snížit nejistota měření. Dále jsme zjistili absolutní a relativní chybu stupnice generátoru funkcí.
 
 %--- LITERATURA a~ZDROJE (povinne) ---
 \clearpage
